--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/misc.xml
+.idea/inspectionProfiles/
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
