--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,19 @@
         </plugins>
     </build>
 
+    <distributionManagement>
+        <repository>
+            <id>vector-repo</id>
+            <name>Vector Private Repository</name>
+            <url>https://repo.vectormc.net/artifactory/private</url>
+        </repository>
+        <snapshotRepository>
+            <id>vector-repo</id>
+            <name>Vector Private Repository</name>
+            <url>https://repo.vectormc.net/artifactory/private</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
